change database desgin